UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Approved_Lowest_Prices__c.object
<CustomObject>
    <fields>
        <fullName>Is_New_Low_Triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Low Triggered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approved_Lowest_Price_SKU__c</fullName>
        <label>Approved Lowest Price/SKU__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approved_Lowest_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Approved Lowest Prices</relationshipLabel>
        <relationshipName>Approved_Lowest_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Approved_Lowest_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approved Lowest Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Product__c</columns>
        <columns>Is_New_Low_Triggered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Product__c</columns>
        <columns>Phoenix_Approved_Lowest_Price_SKU__c</columns>
        <columns>Phoenix_Approver__c</columns>
        <columns>Is_New_Low_Triggered__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Lowest Price-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved Lowest Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>